[gd_scene load_steps=2 format=3 uid="uid://btdve3nxtdb1v"]

[ext_resource type="Script" path="res://addons/diff-margin/popup.gd" id="1_jfria"]

[node name="PopupPanel" type="PopupPanel"]
size = Vector2i(109, 100)
visible = true
script = ExtResource("1_jfria")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
offset_left = 4.0
offset_top = 4.0
offset_right = 105.0
offset_bottom = 96.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="UndoButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Undo"

[node name="CopyButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Copy"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/UndoButton" to="." method="_on_undo_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CopyButton" to="." method="_on_copy_button_pressed"]
